# splay

./: .gitignore  BUGS  BUGS.txt  CHANGES  COPYRIGHT  INSTALL  INSTALL.macosx  INSTALL.md  INSTALL_OSX.md  INSTALL_UBUNTU.md  Makefile  Makefile.macosx  README  README.md  controller.rb  controller_fork.rb  data_bits.c  data_bits.h  docker-compose.yml  init_db.rb  init_users.rb  install.sh  jobd.c  jobd.h  jobd.lua  jobd_no_sandbox.lua  jobs_gc.rb  logd.lua  misc.c  misc.h  reset_splayds.rb  settings.lua  splay.c  splay.h  splay_lib.c  splay_lib.h  splayd.c  splayd.h  splayd.lua  ubuntu_inst.sh
app/controllers/: application_controller.rb  job_controller.rb  splay_controller.rb  splayd_controller.rb
app/helpers/: account_helper.rb  job_helper.rb
app/models/: job.rb  splayd.rb  user_notifier.rb  user_observer.rb
applications/: bt.lua  bt_sent.lua  chord.lua  chord.protocol.lua  chord_p.lua  colfeed.lua  colfeed2.lua  cyclon.lua  cyclon_s.lua  pastry-new.lua  pastry.lua  scribe.lua
applications/dist-db/: dist-db-client-delete-bucket.lua  dist-db-client-delete-object.lua  dist-db-client-get-bucket.lua  dist-db-client-get-object.lua  dist-db-client-get-service.lua  dist-db-client-put-bucket.lua  dist-db-client-put-object.lua  dist-db-client-register-service.lua  dist-db.lua
cli-server/: controller-api.rb
commands/: add_splayd.rb  get_local_log.rb  kill.rb  list_hosts.rb  live.rb  submit_job.rb  submit_job_arg.rb  submit_job_trace.rb  submit_script.rb  test.lua
config/: boot.rb  database.yml  environment.rb
config/environments/: production.rb
config/initializers/: inflections.rb
daemon/: Makefile.am  README.md  clean.sh  configure.ac  doAutoconf.sh
daemon/etc/: settings.lua
daemon/etc/openssl-cert/: Makefile.am  Makefile.in
daemon/include/: jobd.h  misc.h  splay.h  splay_lib.h  splayd.h
daemon/src/: Makefile.am
daemon/src/bash/: clone-daemons.sh  launch-daemons.sh  stop-daemons.sh
daemon/src/c/: Makefile.am  data_bits.c  jobd.c  misc.c  splay.c  splay_lib.c  splayd.c
daemon/src/c/lbase64/: Makefile.am  lbase64.c  test.lua
daemon/src/c/lua-cjson/: Makefile.am  lua_cjson.c
daemon/src/c/luacrypto/: Makefile.am  lcrypto.c  lcrypto.h
daemon/src/lua/: install_check.lua  jobd.lua  jobd_no_sandbox.lua  logd.lua  settings.lua  settings_pl.lua  splayd.lua
daemon/src/lua-cjson/: Makefile.am  configure.ac  lua_cjson.c
daemon/src/lua/modules/splay/: benc.lua  log.lua  misc.lua  queue.lua  socket.lua  test_benc_perf.lua  test_lbinenc.lua  test_misc_core.lua  test_rpc_noserver.lua  test_urpc_server.lua  tree.lua  urpc.lua
daemon/src/lua/testcases/: test_socket.lua  test_splaylog.lua
daemon/src/lua/testcases/star_40/: test_parse.lua
daemon/src/lua/testcases/star_50/: raw.json  test_perf_parse.lua
daemon/src/luacrypto/: Makefile  README
daemon/src/modules/: splay.lua  test-cjson.lua
daemon/src/modules/splay/: coxpcall.lua  log.lua  luasocket.lua  misc.lua  rpc.lua  rpcq.lua  sandbox.lua  test_comparative_bench_enc_libenc.lua  test_events_sleep.lua  test_rpc_server.lua  topo_socket.lua  utils.lua
daemon/src/testcases/: lostprecision.lua  test_splaysocket.lua  test_splaysocketevents.lua
daemon/tools/jitterUtility/: createJitterDataset.py  plotJitter.sh  simpleTrace.churn
daemons/: controller.sh  init.rb  logd.rb  splayd.rb  statusd.rb
db/migrate/: 001_railize_splay.rb  004_add_demo_user_type.rb
docker/: README.md  docker-compose.yml
lib/: all.rb  array_rand.rb  authenticated_test_helper.rb  blacklistd.rb  common.rb  config.rb  db_config.rb  dbutils.rb  distributed_lock.rb  jobd.rb  jobd_standard.rb  jobd_trace.rb  json.rb  llenc.rb  loadavgd.rb  localization.rb  log_object.rb  logd.rb  logd_llenc.rb  splayd.cpp  splayd.rb  statusd.rb  unseend.rb  utils.rb
lib/cpp/: Makefile  cpp.pro  main.cpp  sslserver.cpp  sslserver.h
local_commands/: get_local_log.rb  submit_script.rb
luacrypto/: Makefile.macosx32  lcrypto.c
manual/: index.html
manual/syntax/: shBrushLua.js  syntax.css
misc/: clear_dbs.sh  design-dist-sto-apis.odp  design-dist-sto-apis.odt  distdb-check-nodes.lua  distdb-cli.lua  distdb-client-rpcq.lua  distdb-client.lua  flexifs-client-atomic-async.lua  flexifs-client-atomic-sync.lua  flexifs-client-atomic.lua  flexifs-client-cto-async-mini-proxy.lua  flexifs-client-cto-async.lua  flexifs-client-cto-sync.lua  flexifs-client-openclose-sync.lua  flexifs-client-sync.lua  fuse.c  kill-cli-server.sh  kill-controller.sh  kill-splayds.sh  logger.lua  luacp  luacp_2MB_block  mini-proxy-raw-socket.lua  mini-proxy-rpc.lua  mini-proxy.lua  plot1-discotec.lua  plot2-discotec.c  ports.lua  sample2.lua  splayfuse.lua  test-db-api-perf.lua  test-distdb.lua  test-kyoto.lua  test-turbo-mode-2.lua  test-turbo-mode.lua  test_paxos.lua
misc/lua-file-mgmt/: create-random-files.sh  gen_random_file.lua  luacp  luacp_2MB_blocks  (+3 more)
modules/: splay.lua
releases/: liblua5.1-splayd_amd64-ubuntu12-04.deb  liblua5.1-splayd_amd64-ubuntu13-10.deb  liblua5.1-splayd_i386-ubuntu12-04.deb  liblua5.1-splayd_i386-ubuntu13-10.deb  splayd_1.3.pkg
rpc_server/: controller-api.rb
src/: AUTHORS  AUTHORS.md  Dockerfile  build_client_commands.sh  build_ctrl_dist.sh  build_ctrl_gem.sh  build_daemon_dist.sh  build_daemon_luarocks.sh  build_debs.sh  build_osx_pkg.sh  build_splayweb_dist.sh  bump_version_client_commands.sh  bump_version_controller.sh  bump_version_splayd.sh  bump_version_splayweb.sh  c-header.txt  change-header-client-commands.sh  change-header-controller.sh  change-header-splayd.sh  change-header-splayweb.sh  copy-id.sh  copy-on-cluster.sh  exclude.txt  exclude_from_ctrl.txt  exclude_from_daemondist.txt  exclude_from_splay_client_commands.txt  exclude_from_splayweb.txt  install_splay_nodes.sh  lua-header.txt  remote_pilot.sh  replace-version-client-commands.sh  replace-version-controller.sh  replace-version-splayd.sh  replace-version-splayweb.sh  ruby-header.txt  set_hostname.sh  splayd_template.rockspec  ssh-copy-id.expect  todo.txt  upload_release.sh
tests/autoconfig/firstStep/backup/: Makefile.am  configure.ac  configurePoke.sh
win/: README
(+693 files in other folders)
